01_main/09_sg.tf
resource "aws_security_group" "yh_websg" {
    name = "${var.name}-WEB-SG"
    description = "web sequrity group"
    vpc_id = aws_vpc.yhkim_vpc.id

    ingress = [
        {
            description = var.description.ssh
            from_port = "22"
            to_port = "22"
            protocol = "tcp"
            cidr_blocks = [var.cidr_global]
            ipv6_cidr_blocks = [var.cidr_globalv6]
            prefix_list_ids = null
            security_groups = null
            self = null
        },
        {
            description = var.description.http
            from_port = "80"
            to_port = "80"
            protocol = "tcp"
            cidr_blocks = [var.cidr_global]
            ipv6_cidr_blocks = [var.cidr_globalv6]
            prefix_list_ids = null
            security_groups = null
            self = null
        },
        {
            description = var.description.mysql
            from_port = "3306"
            to_port = "3306"
            protocol = "tcp"
            cidr_blocks = [var.cidr_global]
            ipv6_cidr_blocks = [var.cidr_globalv6]
            prefix_list_ids = null
            security_groups = null
            self = null
        },
        {
            description = var.description.icmp
            from_port = "-1"
            to_port = "-1"
            protocol = "icmp"
            cidr_blocks = [var.cidr_global]
            ipv6_cidr_blocks = [var.cidr_globalv6]
            prefix_list_ids = null
            security_groups = null
            self = null
        }

    ]

    egress = [
        {
            description = "all"
            from_port = 0
            to_port = 0
            protocol = -1
            cidr_blocks = [var.cidr_global]
            ipv6_cidr_blocks = [var.cidr_globalv6]
            prefix_list_ids = null
            security_groups = null
            self = null
        }
    ]
    tags = {
        "Name" = "${var.name}-weg-sg"
    }
}
